--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}div[submit-success] 
     <div class="container">
         <h1 class="mbr-fonts-style mbr-section-title align-left mbr-black mbr-bold mbr-pt-1 mbr-pb-3 display-1">
             Madeleine Mysliwietz</h1>
-        <h2 class="mbr-fonts-style mbr-section-subtitle align-left mbr-black mbr-light mbr-pb-2 display-2">
-            Building the future web, together
-        </h2>
+        <h2 class="mbr-fonts-style mbr-section-subtitle align-left mbr-black mbr-light mbr-pb-2 display-2"></h2>
         
     </div>
 </section>
@@ -45,5 +43,5 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}div[submit-success] 
 
   
   
-<section class="engine"><a href="https://mobirise.info/n">simple web templates</a></section></body>
+<section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section></body>
 </html>
