--- a/index.html
+++ b/index.html
@@ -43,5 +43,5 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}div[submit-success] 
 
   
   
-<section class="engine"><a href="https://mobirise.info/g">build your own site for free</a></section></body>
+<section class="engine"><a href="https://mobirise.info/g">how to build your own site</a></section></body>
 </html>
