--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/index-meta.svg">
   <meta name="twitter:title" content="Mady">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/download.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/mm.png" type="image/x-icon">
   <meta name="description" content="Quisque in augue. Donec aliquam magna nonummy enim. Proin blandit imperdiet sem. Donec malesuada, urna sit amet varius aliquam, nibh tortor laoreet turpis, eget sodales felis nibh ac sapien. Fusce eget augue. Integer sed risus. Aenean mollis. Donec facilisis egestas quam. Duis bibendum augue id mauris. Sed laoreet, tortor vel cursus fringilla, turpis elit vestibulum arcu, eu varius dolor leo in nulla. In sem ipsum, faucibus quis, varius tristique, porta eget, lorem. Curabitur hendrerit diam et mauris. Etiam porta nunc euismod dui. Maecenas a lectus. In hac habitasse platea dictumst. Suspendisse id massa. Nullam porta velit sed lacus. Duis eleifend, felis eu euismod lacinia, felis erat feugiat nisl, vitae congue leo velit a">
   
   
@@ -44,15 +44,11 @@
         <div class="menu-logo">
             <div class="navbar-brand">
                 <span class="navbar-logo">
-                    <a href="https://pferdecoaching-institut.de/prof_dr_schuetz/" target="_blank">
-                         <img src="assets/images/download.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                    <a href="index.html#header2-1">
+                         <img src="assets/images/mm.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
-                <span class="navbar-caption-wrap">
-                    <a class="navbar-caption text-white display-4" href="https://mobirise.co">
-                        MOBIRISE
-                    </a>
-                </span>
+                
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -76,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/f">simple site builder</a></section><section class="cid-sqqgJqFg9z mbr-fullscreen" id="header2-1">
+<section class="engine"><a href="https://mobirise.info/r">bootstrap templates</a></section><section class="cid-sqqgJqFg9z mbr-fullscreen" id="header2-1">
 
     
 
