--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="assets/images/index-meta.svg">
   <meta name="twitter:title" content="Mady">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
-  <link rel="shortcut icon" href="assets/images/mm.png" type="image/x-icon">
+  <link rel="shortcut icon" href="assets/images/mm-1.png" type="image/x-icon">
   <meta name="description" content="Quisque in augue. Donec aliquam magna nonummy enim. Proin blandit imperdiet sem. Donec malesuada, urna sit amet varius aliquam, nibh tortor laoreet turpis, eget sodales felis nibh ac sapien. Fusce eget augue. Integer sed risus. Aenean mollis. Donec facilisis egestas quam. Duis bibendum augue id mauris. Sed laoreet, tortor vel cursus fringilla, turpis elit vestibulum arcu, eu varius dolor leo in nulla. In sem ipsum, faucibus quis, varius tristique, porta eget, lorem. Curabitur hendrerit diam et mauris. Etiam porta nunc euismod dui. Maecenas a lectus. In hac habitasse platea dictumst. Suspendisse id massa. Nullam porta velit sed lacus. Duis eleifend, felis eu euismod lacinia, felis erat feugiat nisl, vitae congue leo velit a">
   
   
@@ -45,7 +45,7 @@
             <div class="navbar-brand">
                 <span class="navbar-logo">
                     <a href="index.html#header2-1">
-                         <img src="assets/images/mm.png" alt="Mobirise" title="" style="height: 3.8rem;">
+                         <img src="assets/images/mm-1.png" alt="Mobirise" title="" style="height: 3.8rem;">
                     </a>
                 </span>
                 
@@ -53,18 +53,18 @@
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-danger display-4" href="index.html#top">
+                    <a class="nav-link link text-white display-4" href="index.html#top">
                         <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
                         Dienstleistungen
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link text-danger display-4" href="index.html#bottom">
+                    <a class="nav-link link text-white display-4" href="index.html#bottom">
                         <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                         Über Uns
                     </a>
                 </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-danger display-4" href="index.html#header2-1">
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white display-4" href="index.html#header2-1">
                     <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
                     Jetzt testen!
                 </a></div>
@@ -72,7 +72,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/m">site design templates</a></section><section class="carousel slide cid-sqqrgRKhdn" data-interval="false" id="slider1-3">
+<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="carousel slide cid-sqqrgRKhdn" data-interval="false" id="slider1-3">
 
     
 
