--- a/index.html
+++ b/index.html
@@ -52,31 +52,17 @@
             </div>
         </div>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav nav-dropdown" data-app-modern-menu="true"><li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html#top">
-                        <span class="mbri-home mbr-iconfont mbr-iconfont-btn"></span>
-                        Dienstleistungen
-                    </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link link text-white display-4" href="index.html#bottom">
-                        <span class="mbri-search mbr-iconfont mbr-iconfont-btn"></span>
-                        Über Uns
-                    </a>
-                </li></ul>
-            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white display-4" href="index.html#header2-1">
-                    <span class="mbri-save mbr-iconfont mbr-iconfont-btn "></span>
-                    Jetzt testen!
-                </a></div>
+            
+            <div class="navbar-buttons mbr-section-btn"><a class="btn btn-sm btn-white display-4" href="index.html#header2-1">test</a></div>
         </div>
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="carousel slide cid-sqqrgRKhdn" data-interval="false" id="slider1-3">
+<section class="engine"><a href="https://mobirise.info/d">site maker</a></section><section class="carousel slide cid-sqqrgRKhdn" data-interval="false" id="slider1-3">
 
     
 
-    <div class="full-screen"><div class="mbr-slider slide carousel" data-keyboard="false" data-ride="carousel" data-interval="5000" data-pause="true"><div class="carousel-inner" role="listbox"><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/pexels-jazlyn-oliver-2667187-2000x2988.jpeg);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/pexels-jazlyn-oliver-2667187-2000x2988.jpeg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/pexels-anastasia-shuraeva-4208106-2000x1333.jpeg);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/pexels-anastasia-shuraeva-4208106-2000x1333.jpeg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-left"></div></div></div></div></div><div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="false" style="background-image: url(assets/images/pexels-rachel-claire-4846367-2000x3000.jpeg);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/pexels-rachel-claire-4846367-2000x3000.jpeg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-right"></div></div></div></div></div></div><a data-app-prevent-settings="" class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#slider1-3"><span aria-hidden="true" class="mbri-left mbr-iconfont"></span><span class="sr-only">Previous</span></a><a data-app-prevent-settings="" class="carousel-control carousel-control-next" role="button" data-slide="next" href="#slider1-3"><span aria-hidden="true" class="mbri-right mbr-iconfont"></span><span class="sr-only">Next</span></a></div></div>
+    <div class="full-screen"><div class="mbr-slider slide carousel" data-keyboard="false" data-ride="carousel" data-interval="5000" data-pause="true"><div class="carousel-inner" role="listbox"><div class="carousel-item slider-fullscreen-image active" data-bg-video-slide="false" style="background-image: url(assets/images/pexels-jazlyn-oliver-2667187-2000x2988.jpeg);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/pexels-jazlyn-oliver-2667187-2000x2988.jpeg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-center"><h2 class="mbr-fonts-style display-1">MM</h2></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/pexels-anastasia-shuraeva-4208106-2000x1333.jpeg);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/pexels-anastasia-shuraeva-4208106-2000x1333.jpeg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-left"></div></div></div></div></div><div class="carousel-item slider-fullscreen-image" data-bg-video-slide="false" style="background-image: url(assets/images/pexels-pixabay-52500-2000x1333.jpeg);"><div class="container container-slide"><div class="image_wrapper"><img src="assets/images/pexels-pixabay-52500-2000x1333.jpeg" alt="" title=""><div class="carousel-caption justify-content-center"><div class="col-10 align-right"></div></div></div></div></div></div><a data-app-prevent-settings="" class="carousel-control carousel-control-prev" role="button" data-slide="prev" href="#slider1-3"><span aria-hidden="true" class="mbri-left mbr-iconfont"></span><span class="sr-only">Previous</span></a><a data-app-prevent-settings="" class="carousel-control carousel-control-next" role="button" data-slide="next" href="#slider1-3"><span aria-hidden="true" class="mbri-right mbr-iconfont"></span><span class="sr-only">Next</span></a></div></div>
 
 </section>
 
@@ -87,7 +73,7 @@
     <div class="container">
         <div class="inner-container" style="width: 66%;">
             <hr class="line" style="width: 25%;">
-            <div class="section-text align-center mbr-white mbr-fonts-style display-5">Foto von Anastasia Shuraeva von Pexels</div>
+            <div class="section-text align-center mbr-white mbr-fonts-style display-5"><a href="assets/files/Termine.pdf" class="text-white">PDF</a></div>
             <hr class="line" style="width: 25%;">
         </div>
     </div>
